findbugs: use more efficient way of constructing Integer/Long from int/long