@@ -168,12 +168,12 @@ public class TestAuthorManager extends TestCase {
 
   @SuppressWarnings("unchecked")
   private File getFile(int i, Author author) throws Exception {
-    Style style = new Style(new Integer(i).toString(), "name");
-    Album album = new Album(new Integer(i).toString(), "name", "artis", 23);
+    Style style = new Style(Integer.valueOf(i).toString(), "name");
+    Album album = new Album(Integer.valueOf(i).toString(), "name", "artis", 23);
     album.setProperty(Const.XML_ALBUM_COVER, "none"); // don't read covers for
     // this test
 
-    Year year = new Year(new Integer(i).toString(), "2000");
+    Year year = new Year(Integer.valueOf(i).toString(), "2000");
 
     IPlayerImpl imp = new MockPlayer();
     Class<IPlayerImpl> cl = (Class<IPlayerImpl>) imp.getClass();
@@ -183,13 +183,13 @@ public class TestAuthorManager extends TestCase {
     Track track = TrackManager.getInstance().registerTrack("name", album, style, author, 120, year,
         1, type, 1);
 
-    Device device = new Device(new Integer(i).toString(), "name");
+    Device device = new Device(Integer.valueOf(i).toString(), "name");
     device.setUrl(System.getProperty("java.io.tmpdir"));
     device.mount(true);
 
-    Directory dir = new Directory(new Integer(i).toString(), "name", null, device);
+    Directory dir = new Directory(Integer.valueOf(i).toString(), "name", null, device);
 
-    File file = new org.jajuk.base.File(new Integer(i).toString(), "test.tst", dir, track, 120, 70);
+    File file = new org.jajuk.base.File(Integer.valueOf(i).toString(), "test.tst", dir, track, 120, 70);
 
     track.addFile(file);
 
